--- a/dictionary-app/src/app/app.component.html
+++ b/dictionary-app/src/app/app.component.html
@@ -7,9 +7,12 @@
     <div>
         <a mat-button (click)="shuffle()"> <i class="material-icons">shuffle</i>  </a>
     </div>
+    <div class="container" style="height: 2px;margin-bottom: 100px">
+        <app-search-bar (searchEmit)="searchResults($event)"></app-search-bar>
+    </div>
 </mat-toolbar>
 
-<app-search-bar (searchEmit)="searchResults($event)"></app-search-bar>
+
 
 <ul *ngIf="pristine===false">
     <mat-card class="example-card" *ngFor="let result of results">Meaning:{{result["meaning"]}}<br> Usage: {{result["pos"]|posPipe}}<br>
