--- a/dictionary-app/src/app/search-bar/search-bar.component.html
+++ b/dictionary-app/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <form class="example-form">
-    <i class="material-icons">search</i>
+    <!-- <i class="material-icons">search</i> -->
     <mat-form-field class="example-full-width">
         <input type="text" placeholder="Search" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" [ngModel]="searchText">
         <mat-autocomplete #auto="matAutocomplete">
