--- a/dictionary-app/src/app/app.component.css
+++ b/dictionary-app/src/app/app.component.css
@@ -4,3 +4,14 @@
                 0 1px 1px 0 rgba(0,0,0,1), 
                 0 1px 3px 0 rgba(0,0,0,1);
 }
+/* .example-card{
+    padding-top: 10px
+} */
+
+.material-icons:hover {
+    color: white;
+}
+
+.material-icons::after{
+    color: white;
+}
