--- a/dictionary-app/src/app/search-bar/search-bar.component.html
+++ b/dictionary-app/src/app/search-bar/search-bar.component.html
@@ -1,7 +1,8 @@
 <form class="example-form">
     <!-- <i class="material-icons">search</i> -->
-    <mat-form-field class="example-full-width">
-        <input type="text" placeholder="Search" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" [ngModel]="searchText">
+    <mat-form-field  floatLabel=never>
+        <input type="text" placeholder="Search" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" [ngModel]="searchText"
+                    (focus)="checkPlaceHolder()" (blur)="checkPlaceHolder()">
         <mat-autocomplete #auto="matAutocomplete">
         <mat-option  *ngFor="let option of filteredOptions" [value]="option" (onSelectionChange)="callSomeFunction(option)">
             {{option}}
