--- a/dictionary-app/src/app/app.component.html
+++ b/dictionary-app/src/app/app.component.html
@@ -1,15 +1,36 @@
-<mat-toolbar color="primary" style="padding: 30px">
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
     <ng-container *ngIf="history.length!==0">
         <i style="  cursor: pointer;" class="material-icons" (click)="historyBtn()">keyboard_backspace</i>&nbsp;&nbsp;
     </ng-container>
     <span>Dictionary</span>
-    <span class="menu-spacer"></span>
     <div>
-        <a mat-button (click)="shuffle()"> <i class="material-icons">shuffle</i>  </a>
+        <button mat-button (click)="shuffle()"> <i class="material-icons">shuffle</i>  </button>
     </div>
-    <div class="container" style="height: 2px;margin-bottom: 100px;margin-top: 50px;">
+    <div class="container">
         <app-search-bar (searchEmit)="searchResults($event)"></app-search-bar>
     </div>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-toolbar color="primary" style="height:0.2em">
+        <mat-toolbar-row>
+        <div *ngIf="user==null">
+            <button mat-button (click)="signIn()" ><span class="hyp-links">Sign in</span></button>
+        </div>
+        <div *ngIf="user!=null">
+                <button mat-button (click)="signOut()" ><span class="hyp-links">Sign Out</span></button>
+        </div>
+        <!-- <div *ngIf="user!=null">
+                <span>{{ user.name }}</span>
+        </div>     -->
+        <div>
+                <button mat-button (click)="signOut()" ><span class="hyp-links">History</span></button>
+        </div>
+        <div>
+                <button mat-button (click)="signOut()" ><span class="hyp-links">Bookmarks</span></button>
+        </div>
+        </mat-toolbar-row>
 </mat-toolbar>
 
 
