--- a/dictionary-app/src/app/search-bar/search-bar.component.css
+++ b/dictionary-app/src/app/search-bar/search-bar.component.css
@@ -1,5 +1,5 @@
 .mat-form-field {
-    width: calc(100% - 50rem);
+    width: calc(100% - 10rem);
     border-style:solid;
     border-color:#673ab7;
     color: #333;
@@ -7,16 +7,23 @@
     font-size: 0.8em;
     padding-left:15px;
     padding-right:15px;
+    min-width: calc(95%);
+    height:2.5em;
+    padding-top:0.1em;
     
 }
-::ng-deep .mat-input-underline {
+
+::ng-deep .mat-form-field-underline {
     display: none;
 }
 
-/* ::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
-::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+::ng-deep .mat-form-field-infix {
+    border: 0px;
+    padding: 0px;
+}
 
-::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
-    transform: translateY(-1.1em) scale(.75);
-    width: 133.33333%;
-} */
+::ng-deep .mat-form-field-wrapper {
+    padding-bottom: 0px;
+    padding: 0px;
+}
+
