--- a/dictionary-app/src/app/app.component.html
+++ b/dictionary-app/src/app/app.component.html
@@ -25,7 +25,7 @@
                 <span>{{ user.name }}</span>
         </div>     -->
         <div>
-                <button mat-button (click)="signOut()" ><span class="hyp-links">History</span></button>
+                <button mat-button (click)="getHistory()" ><span class="hyp-links">History</span></button>
         </div>
         <div>
                 <button mat-button (click)="signOut()" ><span class="hyp-links">Bookmarks</span></button>
